<resources>
    <string name="app_name">censoBrasilApp</string>
    <string name="action_config">Configurações</string>

    <!-- Tela de início -->
    <string name="inicio_titulo">Início</string>
    <string name="btn_proximo_inicio">Próximo</string>

    <!-- Tela de faces -->
    <string name="faces_titulo">Faces</string>
    <string name="btn_proximo_faces">Iniciar</string>
    <string name="btn_adc_face">+</string>
    <string name="popup_faces">Atenção</string>
    <string name="popup_message_faces">Ao finalizar a criação da nova face, ela irá para aprovação do seu supervisor. 
Deseja continuar para criação de nova face?</string>
    <string name="btn_popup_sim">Sim</string>
    <string name="btn_popup_nao">Não</string>

    <!--- Menu pesquisa-->
    <string name="pesquisa_titulo">Pesquisa</string>
    <string name="btn_presencial">Presencial</string>
    <string name="btn_agendamento">Agendamento</string>
    <string name="btn_internet">Via internet</string>
    <string name="btn_nao_possivel">Não é possível realizar agora</string>

    <!-- Tela de etapas -->
    <string name="etapas_titulo">Etapas</string>
    <string name="btn_proximo_etapas">Próximo</string>

    <!-- Tela de pesquisa 1 -->
    <string name="hint_quantidade">Quantidade</string>
    <string name="txt_moradores">Quantas pessoas moravam neste domicílio em 31 de julho de 2022? </string>
    <string name="txt_criancas">Quantas crianças de zero a nove anos de idades, inclusive recém-nascidos, moravam neste domicílio em 31 de julho de 2022? </string>
    <string name="btn_proximo_pesquisa">Próximo</string>

    <!-- Tela de Morador -->
    <string name="hint_nome">Nome</string>
    <string name="hint_sobrenome">Sobrenome</string>
    <string name="txt_sexo">Sexo</string>
    <string name="radio_feminino">Feminino</string>
    <string name="radio_masculino">Masculino</string>
    <string name="hint_dt_nascimento">Data nascimento</string>
    <string name="btn_nascimento">Não sabe informar data de nascimento</string>
    <string name="btn_proximo_morador">Próximo</string>

    <!-- Tela de informações adicionais do morador -->
    <string name="hint_cor">Cor ou raça</string>
    <string name="txt_ler">Sabe ler e escrever?</string>
    <string name="radio_sim">Sim</string>
    <string name="radio_nao">Não</string>
    <string name="txt_recebimento">Qual era a forma de pagamento normalmente recebido pelo responsável pelo domicílio?</string>
    <string name="txt_rendimentos">Exemplo de rendimentos: trabalho, aposentadoria, Auxílio Brasil (antigo Bolsa Família) ou outra origem.</string>
    <string name="radio_valor">Valor em dinheiro, produtos ou mercadorias</string>
    <string name="radio_moradia">Outra forma(moradia, alimentação, etc)</string>
    <string name="radio_outro">Não tem</string>

    <!--- Tela de moradores -->
    <string name="moradores_titulo">Moradores</string>
    <string name="txt_responsavel">Responsável financeiro pelo domicílio</string>
    <string name="btn_adc_morador">+</string>
    <string name="btn_concluido_moradores">Concluído</string>

    <!--- Tela de informações de moradores adicionais -->
    <string name="txt_parentesco">Qual a relação de parentesco ou convivência com a pessoa responsável pelo domicílio?</string>
    <string name="txt_info_prestada">Quem prestou as informações dessa pessoa?</string>

    <!--- Tela de informações do domicílio-->
    <string name="txt_agua">Qual a principal forma de abastecimento de água utilizada neste domicílio?</string>
    <string name="txt_rede">Possui acesso à rede de distribuição de água?</string>
    <string name="txt_agua_utilizada">A água utilizada chega:</string>
    <string name="radio_fora">Encanada, mas apenas no terreno</string>
    <string name="radio_dentro">Encanada até dentro da casa, apartamento ou habitação</string>
    <string name="radio_nao_chega">Não chega encanada</string>
    <string name="txt_banheiros">Não chega encanada</string>
    <string name="hint_banheiros">Quantos banheiros de uso exclusivo existem neste domicílio?</string>
    <string name="txt_banheiros_exclusivo">Quantos banheiros de uso exclusivo existem neste domicílio? </string>
    <string name="txt_esgoto">Para onde vai o esgoto do banheiro?</string>
    <string name="txt_lixo">O lixo deste domicílio é:</string>
    <string name="btn_continuar_domicilio">Continuar</string>

    <!-- Tela de informações adicionais do morador -->
    <string name="txt_mortalidade">De janeiro de 2019 a julho de 2022, faleceu alguma pessoa que morava com você(s)?</string>
    <string name="btn_finalizar_mortalidade">Finalizar</string>

    <!-- Pop up sucesso cadastrar pesquisa -->
    <string name="popup_finalizar">Pesquisa concluída</string>
    <string name="btn_popup_finalizar">OK</string>

    <!-- Pop up erro cadastrar pesquisa -->
    <string name="popup_finalizar_erro">Não foi possível salvar a pesquisa</string>
    <string name="popup_erro_titulo">Erro</string>
    <string name="btn_popup_finalizar_erro">OK</string>

    <!-- Tela adicionar face -->
    <string name="adc_face_titulo">Adicionar face</string>
    <string name="quadra_text">Quadra</string>
    <string name="face_text">Face</string>
    <string name="logradouro_text">Logradouro</string>
    <string name="cep_text">CEP</string>
    <string name="bairro_text">Bairro</string>
    <string name="check_unidade_text">Nenhuma unidade a declarar</string>
    <string name="btn_proximo">Próximo</string>

    <!-- Tela adicionar unidade -->
    <string name="adc_unidade_label">Adicionar unidade</string>
    <string name="id_text">Existe identificação?</string>
    <string name="numero_text">Número</string>
    <string name="mod_text">Modificador</string>
    <string name="ref_text">Referência</string>
    <string name="complemento_text">Complementos</string>

    <!-- Tela coordenada -->
    <string name="adc_coordenada_label">Coordenada</string>
    <string name="txt_buscar">Buscar coordenada</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_herdar">Herdar</string>
    <string name="txt_capturar">Capturar coordenada</string>
    <string name="btn_confirmar">Confirmar</string>

    <!-- Tela especies -->
    <string name="adc_especies_label">Espécie</string>
    <string name="btn_especies">Concluído</string>

    <!-- Tela espécie -->
    <string name="domicilio_text">Espécie de domicílio</string>
    <string name="edificacao_text">Tipo de edificação</string>
    <string name="responsavel_text">Nome do responsável</string>
    <string name="telefone_text">Telefone</string>
    <string name="email_text">Email</string>
    <string name="btn_especie">Confirmar</string>
    <string name="adc_especie_label">Espécie</string>

    <!-- Pop up erro cadastrar pesquisa -->
    <string name="popup_finalizar_erro_face">Não foi possível salvar a face</string>
    <string name="popup_finalizar_face">Preenchimento da face concluída</string>

</resources>