<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.censobrasilapp.view.MenuPesquisa">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_presencial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_presencial"
            android:layout_marginTop="120dp"
            android:layout_marginStart="150dp"/>

        <Button
            android:id="@+id/button_agendamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_agendamento"
            android:layout_marginTop="220dp"
            android:layout_marginStart="140dp" />

        <Button
            android:id="@+id/button_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_internet"
            android:layout_marginTop="320dp"
            android:layout_marginStart="150dp"/>

        <Button
            android:id="@+id/button_nao_possivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_nao_possivel"
            android:layout_marginTop="420dp"
            android:layout_marginStart="100dp"/>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>