<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.censobrasilapp.InfoDomicilioTela">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/text_agua"
            android:layout_below="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/txt_agua" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_agua"
            android:layout_below="@+id/text_agua"
            android:layout_width="350dp"
            android:layout_height="64dp"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/auto_agua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_rede"
            android:layout_below="@+id/input_agua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/txt_rede" />

        <RadioGroup
            android:id="@+id/radio_group_rede"
            android:layout_below="@+id/text_rede"
            android:orientation="horizontal"
            android:checkedButton="@+id/radio_button_rede"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp">
            <RadioButton
                android:id="@+id/radio_button_sim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_sim"/>

            <RadioButton
                android:id="@+id/radio_button_nao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_nao"/>
        </RadioGroup>

        <TextView
            android:id="@+id/text_agua_utilizada"
            android:layout_below="@+id/radio_group_rede"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/txt_agua_utilizada" />

        <RadioGroup
            android:id="@+id/radio_group_agua_utilizada"
            android:layout_below="@+id/text_agua_utilizada"
            android:orientation="vertical"
            android:checkedButton="@+id/radio_button_agua_utilizada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp">
            <RadioButton
                android:id="@+id/radio_button_dentro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_dentro"/>

            <RadioButton
                android:id="@+id/radio_button_fora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_fora"/>

            <RadioButton
                android:id="@+id/radio_button_nao_chega"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_nao_chega"/>
        </RadioGroup>

        <Button
            android:id="@+id/button_info_domicilio"
            android:layout_below="@+id/radio_group_agua_utilizada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_continuar_domicilio"
            android:layout_marginStart="270dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>