<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.censobrasilapp.InfoDemaisMoradoresTela">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_cor"
            android:layout_below="@+id/indicator"
            android:layout_width="350dp"
            android:layout_height="64dp"
            android:hint="@string/hint_cor"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="120dp"
            android:layout_marginStart="30dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/auto_cor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_ler"
            android:layout_below="@+id/input_cor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/txt_ler" />

        <RadioGroup
            android:id="@+id/radio_group_ler"
            android:layout_below="@+id/text_ler"
            android:orientation="horizontal"
            android:checkedButton="@+id/radio_button_ler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp">
            <RadioButton
                android:id="@+id/radio_button_sim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_sim"/>

            <RadioButton
                android:id="@+id/radio_button_nao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_nao"/>
        </RadioGroup>

        <TextView
            android:id="@+id/text_parentesco"
            android:layout_below="@+id/radio_group_ler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/txt_parentesco" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_parentesco"
            android:layout_below="@+id/text_parentesco"
            android:layout_width="350dp"
            android:layout_height="64dp"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/auto_parentesco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_info_prestada"
            android:layout_below="@+id/input_parentesco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/txt_info_prestada" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_info_prestada"
            android:layout_below="@+id/text_info_prestada"
            android:layout_width="350dp"
            android:layout_height="64dp"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/auto_info_prestada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_info_demais_moradores"
            android:layout_below="@+id/input_info_prestada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_proximo_morador"
            android:layout_marginStart="270dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>